# AI

./: .env.example  .gitignore  820.md  RAG-原理.py  README.md  aspectSDKprompt.md  main_new.py  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
MCP/: mcpserve-weather.py
MCP/tools/: llm_logger.py
RAG原理及过程/: doc.md
docs/: api.md
springAILearn/: pom.xml
springAILearn/chatClineTest/: pom.xml
springAILearn/chatClineTest/src/main/java/com/example/chatclinetest/: ChatClineTestApplication.java
springAILearn/chatClineTest/src/main/java/com/example/chatclinetest/AutoAdvisor/: ReReadingAdvisor.java
springAILearn/chatClineTest/src/main/resources/: application.properties  application.yml
springAILearn/chatClineTest/src/main/resources/sql/: schema-mysql.sql
springAILearn/chatClineTest/src/test/java/com/example/chatclinetest/: ChatClineTestApplicationTests.java  TestAdvisor.java  TestChatClient.java  TestJdbcAdvisor.java  TestMemory.java  TestPrompt.java
springAILearn/quick-start/: pom.xml
springAILearn/quick-start/src/main/java/com/example/quickstart/: QuickStartApplication.java
springAILearn/quick-start/src/main/java/com/example/quickstart/controller/: MorePlatformAndModelController.java
springAILearn/quick-start/src/main/resources/: application.properties
springAILearn/quick-start/src/test/java/com/example/quickstart/: QuickStartApplicationTests.java  TestDeepSeek.java  TestQw.java  Testollama.java
src/: __init__.py  utils.py
src/MCP/tools/: README.md  mcp_logger_simple.py  systemprompt.md
tests/: test_main.py  test_utils.py
(+1 files in other folders)
