[project]
name = "pythontest"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=1.0.15",
    "fastapi>=0.116.1",
    "google-genai>=1.26.0",
    "httpx>=0.28.1",
    "mcp[cli]>=1.12.0",
    "python-dotenv>=1.1.1",
    "sentence-transformers>=5.0.0",
    "uvicorn>=0.35.0",
]
